--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+body, html {
+  margin: 0;
+  padding: 0;
+  background: #031e11;
 }
 
-.App-logo {
-  height: 40vmin;
+#terminal {
+  height: 100vh;
+  width: 100vw;
+  background: none;
+
+  color: lime;
+  font-family:'VT323';
+  font-size: 32px;
+
+  border: none;
+  overflow: auto;
+  outline: none;
+  resize: none;
+
+}
+
+.flicker {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(18, 16, 16, 0.2);
+  opacity: 0;
+  z-index: 1000;
+  pointer-events: none;
+  animation: flicker 5s infinite;
+}
+@keyframes flicker {
+  0% {
+    opacity: 0.552;
+  }
+  5% {
+    opacity: 0.48287;
+  }
+  10% {
+    opacity: 0.59134;
+  }
+  15.0% {
+    opacity: 0.79543;
+  }
+  20% {
+    opacity: 0.75134;
+  }
+  25% {
+    opacity: 0.1956;
+  }
+  30.0% {
+    opacity: 0.90687;
+  }
+  35% {
+    opacity: 0.122;
+  }
+  40% {
+    opacity: 0.62254;
+  }
+  45% {
+    opacity: 0.56977;
+  }
+  50% {
+    opacity: 0.9925;
+  }
+  55.0% {
+    opacity: 0.55487;
+  }
+  60.0% {
+    opacity: 0.16607;
+  }
+  65% {
+    opacity: 0.12353;
+  }
+  70% {
+    opacity: 0.2214;
+  }
+  75% {
+    opacity: 0.67908;
+  }
+  80% {
+    opacity: 0.97163;
+  }
+  85.0% {
+    opacity: 0.1275;
+  }
+  90% {
+    opacity: 0.37186;
+  }
+  95% {
+    opacity: 0.24475;
+  }
+  100% {
+    opacity: 0.37221;
+  }
+}
+
+.scanlines {
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0),
+    rgba(255,255,255,0) 50%,
+    rgba(0,0,0,.2) 70%,
+    rgba(0,0,0,.6)
+  );
+  /* background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0),
+    rgba(255,255,255,0) 50%,
+    rgba(0,0,0,.2) 70%,
+    rgba(0,0,0,.6)
+  ); */
+  background-size: 100% .3rem;
+  position: fixed;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.scanlines:before{
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 5px;
+  background: #fff;
+  background: linear-gradient(to bottom,
+      rgba(255,0,0,0) 0%,
+      rgba(255,250,250,1) 50%,
+      rgba(255,255,255,0.98) 51%,
+      rgba(255,0,0,0) 100%
+  );
+  opacity:.1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scanlines:after {
+  box-shadow: 0 2px 6px rgba(25,25,25,0.2),
+      inset 0 1px rgba(50,50,50,0.1),
+      inset 0 3px rgba(50,50,50,0.05),
+      inset 0 3px 8px rgba(64,64,64,0.05),
+      inset 0 -5px 10px rgba(25,25,25,0.1);
+}
+/* Select every .scanlines:before element preceded by terminal with focus */
+#terminal:focus-within ~ .scanlines:before {
+  content: '';
+  display: block;
+  animation: vline calc(var(--time, 2) * 1s) linear infinite;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes vline {
+  to { transform: translate(0, 100vh)}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
